<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@mipmap/ic_search_white"
        app:showAsAction="always"
        android:iconifiedByDefault="true"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search"/>

    <item
        android:id="@+id/more_optinos_order_Asc"
        app:showAsAction="never"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/order_asc"/>

    <item
        android:id="@+id/more_optinos_order_Desc"
        app:showAsAction="never"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/order_desc"/>


</menu>