<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:gravity="end">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/product_detail_height"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="8dp"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_photo_samsung_s7"
                        android:contentDescription="@string/product_image"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_alignParentBottom="true"
                        android:background="@android:color/black"
                        android:alpha="0.4">


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="10dp"

                        android:layout_alignParentBottom="true">

                        <TextView
                            android:id="@+id/price"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="50"
                            android:text="@string/price_detail"
                            android:textSize="32sp"
                            android:textColor="@android:color/white"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="60"
                            android:gravity="center"
                            android:textSize="20sp"
                            android:text="@string/title_detail"
                            android:textColor="@android:color/white"/>


                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="8dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_description"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/Subtitle_size"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="10dp">


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="50"
                            android:text="@string/product_condition"
                            android:textSize="18sp"
                            android:textColor="@color/gray_medium"
                            android:gravity="center_vertical" />

                        <TextView
                            android:id="@+id/condition"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="50"
                            android:text="@string/price_detail"
                            android:textSize="40sp"
                            android:textColor="@color/orange"
                            android:gravity="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="10dp">


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="50"
                            android:text="@string/product_quantity"
                            android:textSize="18sp"
                            android:textColor="@color/gray_medium"
                            android:gravity="center_vertical"/>

                        <TextView
                            android:id="@+id/available_quantity"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="50"
                            android:text="@string/price_detail"
                            android:textSize="40sp"
                            android:textColor="@color/orange"
                            android:gravity="center" />

                    </LinearLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
